add media screen 320 375 425 500

--- a/docs/scss/_header.scss
+++ b/docs/scss/_header.scss
@@ -38,6 +38,7 @@ li {
 .nav-link:hover,
 .nav-link:focus {
 	background: linear-gradient(to top, #ffe838, #fd57bf);
+	background-clip: text;
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
 }
