--- a/docs/scss/_typography.scss
+++ b/docs/scss/_typography.scss
@@ -29,7 +29,7 @@ aside {
 
 html {
 	box-sizing: border-box;
-	font: var(--font-size-body, 14px) / 1.5 "Raleway", Georgia, serif;
+	//font: var(--font-size-body, 14px) / 1.5 "Raleway", Georgia, serif;
 }
 
 @media (min-width: 600px) {
