--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,6 @@
   --layout-main-width: 60em;
   --color-body-text: #000;
   --color-body-bgrd: white;
-  --color-link-default: rgb(255, 255, 255);
   --color-border-default: #999;
   --spacing-layout-elements: 2em;
   --header-color-h6: whitesmoke;
@@ -46,7 +45,6 @@ aside {
 html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  font: var(--font-size-body, 14px)/1.5 "Raleway", Georgia, serif;
 }
 
 @media (min-width: 600px) {
@@ -253,6 +251,7 @@ li {
 .nav-link:focus {
   background: -webkit-gradient(linear, left bottom, left top, from(#ffe838), to(#fd57bf));
   background: linear-gradient(to top, #ffe838, #fd57bf);
+  background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -819,10 +818,6 @@ input[type="submit"]:hover {
 }
 
 @media screen and (max-width: 768px) {
-  body {
-    background: url("../images/img-8.jpg") no-repeat center fixed;
-    background-size: cover;
-  }
   .landing-text {
     font-size: 1.5rem;
   }
@@ -872,7 +867,7 @@ input[type="submit"]:hover {
     margin: 0 0 0 auto;
   }
   .timeline .date:before {
-    left: -20rem;
+    left: -19.2rem;
   }
   .timeline .date:after {
     left: -5.5rem;
@@ -933,6 +928,63 @@ input[type="submit"]:hover {
     width: 100%;
   }
   .up {
+    right: 2rem;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  body,
+  html {
+    overflow-x: hidden;
+    width: 33em;
+  }
+  .landing-text {
+    width: 22em;
+    left: -11em;
+  }
+  .landing-text h1 {
+    font-size: 6rem;
+  }
+  .timeline .date:after {
+    left: -5.9rem;
+  }
+  .about .container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column wrap;
+            flex-flow: column wrap;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .about-details h1 {
+    font-size: 6rem;
+  }
+  .timeline p {
+    font-size: 1.2rem;
+    width: 260px;
+  }
+  .timeline h1 {
+    font-size: 1.2rem;
+  }
+  .nav-list {
+    padding-left: 0em;
+  }
+  .services,
+  .portfolio {
+    width: 34em;
+  }
+  .menu-toggler {
+    right: -5rem;
+  }
+  .up {
+    top: 0.5rem;
     right: 2rem;
   }
 }
