--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -8,7 +8,7 @@
 
 	--color-body-text: #000;
 	--color-body-bgrd: white;
-	--color-link-default: rgb(255, 255, 255);
+	//--color-link-default: rgb(255, 255, 255);
 
 	--color-border-default: #999;
 
