--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -60,6 +60,7 @@
 
 	.timeline .date:before {
 		left: -19.2rem;
+		color: rgb(21, 223, 31);
 	}
 
 	.timeline .date:after {
@@ -172,6 +173,6 @@
 	}
 	.up {
 		top: 0.5rem;
-		right: 2rem;
+		right: 1rem;
 	}
 }
