--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -22,11 +22,22 @@
 	}
 
 	.nav-link {
-		font-size: 4.5rem;
+		font-size: 2.5rem;
 	}
 
-	.about-heading h1 {
-		font-size: 8rem;
+	.about-heading {
+		h1 {
+			font-size: 8rem;
+			position: relative;
+			right: 0.6em;
+		}
+		h6 {
+			position: relative;
+			right: 8em;
+		}
+	}
+	html:not(.no-js) [data-aos^="fade"][data-aos^="fade"].aos-animate {
+		width: 259px;
 	}
 
 	.section-heading h1 {
@@ -35,6 +46,8 @@
 
 	.about-details .nav-list {
 		flex-direction: initial;
+		position: relative;
+		right: 9em;
 	}
 
 	.about-details li {
@@ -43,6 +56,7 @@
 
 	.my-skills {
 		grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+		justify-items: center;
 	}
 
 	.icon-container {
@@ -75,7 +89,7 @@
 	}
 
 	.landing-text h1 {
-		font-size: 8rem;
+		font-size: 6.5rem;
 	}
 	.landing-text h6 {
 		font-size: 1.4rem;
@@ -110,15 +124,22 @@
 		order: 2;
 	}
 
-	.timeline p {
-		font-size: 1.6rem;
+	.timeline {
+		h1 {
+			font-size: 1rem;
+			width: 300px;
+		}
+		p {
+			font-size: 1.6rem;
+			width: 400px;
+		}
 	}
 
 	.timeline .date:before {
 		font-size: 1.4rem;
 	}
-	form {
-		width: 100%;
+	.timeline .date::after {
+		left: -5.8rem;
 	}
 
 	.up {
@@ -132,6 +153,9 @@
 		overflow-x: hidden;
 		width: 33em;
 	}
+	//body .lock {
+	//	overflow: hidden;
+	//}
 	.landing-text {
 		width: 22em;
 		left: -11em;
@@ -148,8 +172,23 @@
 		align-items: center;
 		justify-content: center;
 	}
-	.about-details h1 {
-		font-size: 6rem;
+	.about-details {
+		h1 {
+			font-size: 6rem;
+			right: 0;
+		}
+		h6 {
+			right: 0;
+		}
+		p {
+			font-size: 1.3em;
+		}
+		.nav-list {
+			right: 0;
+		}
+	}
+	.my-skills {
+		justify-items: center;
 	}
 	.timeline {
 		p {
@@ -157,7 +196,11 @@
 			width: 260px;
 		}
 		h1 {
-			font-size: 1.2rem;
+			font-size: 1.1rem;
+			width: 300px;
+		}
+		ul {
+			width: 69%;
 		}
 	}
 	.nav-list {
@@ -169,10 +212,33 @@
 	}
 
 	.menu-toggler {
-		right: -5rem;
+		right: -1rem;
 	}
 	.up {
 		top: 0.5rem;
 		right: 1rem;
+	}
+}
+
+@media screen and (max-width: 320px) {
+	body.lock {
+		overflow: hidden;
+	}
+	.menu-toggler {
+		right: -8rem;
+	}
+	.top-nav.open {
+		height: 169vh;
+	}
+	.about-details .nav-list {
+		right: 0;
+	}
+	.my-skills {
+		justify-items: center;
+	}
+	.portfolio-description {
+		p {
+			font-size: 1.6em;
+		}
 	}
 }
