--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -42,29 +42,6 @@ aside {
   display: block;
 }
 
-html {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-@media (min-width: 600px) {
-  html {
-    font-size: var(--font-size-body-large, 16px);
-  }
-}
-
-@media (min-width: 1024px) {
-  html {
-    font-size: var(--font-size-body-big, 18px);
-  }
-}
-
-@media (min-width: 1600px) {
-  html {
-    font-size: var(--font-size-body-huge, 20px);
-  }
-}
-
 body,
 table,
 form,
@@ -192,7 +169,7 @@ blockquote .author:before {
 body {
   width: 100%;
   height: 100%;
-  background: url("../images/img-7.jpg") no-repeat center fixed;
+  background-image: url("../images/img-7.jpg");
   background-size: cover;
   overflow-x: hidden;
 }
@@ -394,6 +371,10 @@ li {
   padding-top: 15px;
 }
 
+b {
+  color: red;
+}
+
 .profile-img {
   -webkit-box-flex: 1;
       -ms-flex: 1;
@@ -577,7 +558,7 @@ li {
   width: 10rem;
   height: 10rem;
   border: 3px solid #ffe838;
-  background-color: #fd57bf;
+  background-color: #2df113;
   margin-bottom: 2rem;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -587,11 +568,15 @@ li {
 }
 
 .icon-container i {
-  color: #ffe838;
+  color: #ff0000;
   font-size: 5rem;
   margin: auto;
   -webkit-transform: rotate(-45deg);
           transform: rotate(-45deg);
+}
+
+.skill:nth-child(1) {
+  margin-top: 3em;
 }
 
 .portfolio-item {
@@ -701,6 +686,7 @@ li {
   text-align: right;
   min-width: 12rem;
   font-size: 1.5rem;
+  color: white;
 }
 
 .timeline .date:after {
@@ -835,10 +821,19 @@ input[type="submit"]:hover {
     margin: 2rem 0;
   }
   .nav-link {
-    font-size: 4.5rem;
+    font-size: 2.5rem;
   }
   .about-heading h1 {
     font-size: 8rem;
+    position: relative;
+    right: 0.6em;
+  }
+  .about-heading h6 {
+    position: relative;
+    right: 8em;
+  }
+  html:not(.no-js) [data-aos^="fade"][data-aos^="fade"].aos-animate {
+    width: 259px;
   }
   .section-heading h1 {
     font-size: 3rem;
@@ -848,6 +843,8 @@ input[type="submit"]:hover {
     -webkit-box-direction: initial;
         -ms-flex-direction: initial;
             flex-direction: initial;
+    position: relative;
+    right: 9em;
   }
   .about-details li {
     margin: 0 2rem;
@@ -855,6 +852,7 @@ input[type="submit"]:hover {
   .my-skills {
     -ms-grid-columns: (minmax(25rem, 1fr))[auto-fit];
         grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+    justify-items: center;
   }
   .icon-container {
     width: 7rem;
@@ -868,6 +866,7 @@ input[type="submit"]:hover {
   }
   .timeline .date:before {
     left: -19.2rem;
+    color: #15df1f;
   }
   .timeline .date:after {
     left: -5.5rem;
@@ -880,7 +879,7 @@ input[type="submit"]:hover {
     right: 2rem;
   }
   .landing-text h1 {
-    font-size: 8rem;
+    font-size: 6.5rem;
   }
   .landing-text h6 {
     font-size: 1.4rem;
@@ -918,14 +917,19 @@ input[type="submit"]:hover {
         -ms-flex-order: 2;
             order: 2;
   }
+  .timeline h1 {
+    font-size: 1rem;
+    width: 300px;
+  }
   .timeline p {
     font-size: 1.6rem;
+    width: 400px;
   }
   .timeline .date:before {
     font-size: 1.4rem;
   }
-  form {
-    width: 100%;
+  .timeline .date::after {
+    left: -5.8rem;
   }
   .up {
     right: 2rem;
@@ -965,13 +969,30 @@ input[type="submit"]:hover {
   }
   .about-details h1 {
     font-size: 6rem;
+    right: 0;
+  }
+  .about-details h6 {
+    right: 0;
+  }
+  .about-details p {
+    font-size: 1.3em;
+  }
+  .about-details .nav-list {
+    right: 0;
+  }
+  .my-skills {
+    justify-items: center;
   }
   .timeline p {
     font-size: 1.2rem;
     width: 260px;
   }
   .timeline h1 {
-    font-size: 1.2rem;
+    font-size: 1.1rem;
+    width: 300px;
+  }
+  .timeline ul {
+    width: 69%;
   }
   .nav-list {
     padding-left: 0em;
@@ -981,10 +1002,31 @@ input[type="submit"]:hover {
     width: 34em;
   }
   .menu-toggler {
-    right: -5rem;
+    right: -1rem;
   }
   .up {
     top: 0.5rem;
-    right: 2rem;
+    right: 1rem;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  body.lock {
+    overflow: hidden;
+  }
+  .menu-toggler {
+    right: -8rem;
+  }
+  .top-nav.open {
+    height: 169vh;
+  }
+  .about-details .nav-list {
+    right: 0;
+  }
+  .my-skills {
+    justify-items: center;
+  }
+  .portfolio-description p {
+    font-size: 1.6em;
   }
 }
