--- a/docs/scss/_main.scss
+++ b/docs/scss/_main.scss
@@ -1,9 +1,11 @@
 body {
 	width: 100%;
 	height: 100%;
-	background: url("../images/img-7.jpg") no-repeat center fixed;
+	background-image: url("../images/img-7.jpg");
+
 	background-size: cover;
 	overflow-x: hidden;
+	//background-size: cover;
 }
 
 section {
